styling for chat and nav bar spacing corrected

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap");
 
 // Main body styles
+html {
+  scroll-behavior: smooth;
+}
 body {
   padding-bottom: 9%;
   h1,
@@ -38,6 +41,17 @@ body {
   }
 }
 
+.app-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
 // Navigation styles
 nav {
   width: 100%;
@@ -49,10 +63,11 @@ nav {
     rgb(0, 94, 184)
   );
   background-color: rgb(0, 94, 184);
-  padding: 1.5% 0;
-  display: flex;
+  display: grid;
+  grid-template-columns: 4fr repeat(5, 1fr) 0.5fr;
   align-items: center;
-  justify-content: flex-end;
+  position: fixed;
+  z-index: 2;
   a {
     margin: 1%;
     padding: 0.5% 1%;
@@ -67,10 +82,9 @@ nav {
     }
   }
   a:first-child {
-    justify-self: flex-start;
     font-size: 3rem;
     text-decoration: none;
-    justify-self: left;
+    justify-self: flex-start;
     color: rgb(255, 255, 255);
     text-shadow: black 1px 1px 5px;
     padding: 0.5%;
@@ -98,6 +112,7 @@ h1 {
 .banner {
   background-image: url("./imgs/alexander-popov-JhYnL-BiP18-unsplash.jpg");
   height: 50vh;
+  padding-top: 10%;
   background-position-y: center;
   background-size: cover;
   background-repeat: no-repeat;
